@@ -3,6 +3,8 @@ Revision history for libeio
 TODO: maybe add mincore support? available on at least darwin, solaris, linux, freebsd
 TODO: openbsd requires stdint.h for intptr_t - why posix?
 
+TODO: make mtouch/readdir maybe others cancellable in-request
+TODO: fadvise request
 1.0
 	- use nonstandard but maybe-working-on-bsd fork technique.
 	- support a max_idle value of 0.
@@ -38,3 +40,4 @@ TODO: openbsd requires stdint.h for intptr_t - why posix?
         - mknod used int3 for dev_t (§2 bit), not offs (64 bit).
         - fix memory corruption in eio_readdirx for the flags
           combination EIO_READDIR_STAT_ORDER | EIO_READDIR_DIRS_FIRST.
+        - port to openbsd (another blatantly broken non-UNIX/POSIX platform).
